# goshimmer-client-c

./: CMakeLists.txt  LICENSE  README.md  library.json
src/: CMakeLists.txt
src/client/: client_service.h
src/client/api/: get_funds.c  get_funds.h  get_node_info.c  get_node_info.h  get_unspent_outputs.c  get_unspent_outputs.h  json_utils.c  json_utils.h  response_error.c  response_error.h  send_transaction.c  send_transaction.h
src/client/network/: http.h  http_buffer.c  http_curl.c  http_esp32.c
src/core/: address.c  address.h  balance.c  balance.h  message.h  output_ids.c  output_ids.h  signatures.c  signatures.h  transaction.c  transaction.h  transation.c  transation.h  types.h  unspent_outputs.c  unspent_outputs.h
src/utils/: allocator.h  base64.c  base64.h  bit_mask.c  bit_mask.h  bitmask.c  bitmask.h  byte_buffer.c  byte_buffer.h  iota_str.c  iota_str.h
src/wallet/: address_manager.c  address_manager.h  asset.h  asset_registry.h  output.h  wallet.c  wallet.h
tests/: CMakeLists.txt
tests/client/: test_get_funds.c  test_get_node_info.c  test_get_unspent_outputs.c  test_http_client.c
tests/core/: test_address.c  test_balance.c  test_output_ids.c  test_signatures.c  test_transaction.c  test_unspent_outputs.c
tests/utils/: test_base64.c  test_bit_mask.c  test_bitmask.c  test_byte_buf.c
tests/wallet/: test_wallet.c  test_wallet_api.c
